# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.59"
bytes = "1.3.0"                                     # helps manage buffers
env_logger = "0.10.0"
futures = "0.3.29"
futures-util = "0.3.29"
log = "0.4.20"
nom = "7.1.3"
resp = "1.0.3"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
thiserror = "1.0.32"
tokio = { version = "1.23.0", features = ["full"] } # async networking
tokio-util = { version = "0.7.10", features = ["full"] }
