# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.59"
async-channel = "2.3.1"
bincode = "1.3.3"
bytes = "1.3.0"                                     # helps manage buffers
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.29"
futures-util = "0.3.29"
hex = "0.4.3"
log = "0.4.20"
nom = "7.1.3"
rand = "0.8.5"
rdb = "0.2.1"
resp = "1.0.3"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
thiserror = "1.0.32"
tokio = { version = "1.23.0", features = ["full"] } # async networking
tokio-util = { version = "0.7.10", features = ["full"] }
